# pripy

./: .gitignore  LICENSE  README.md  compass_ngs.py  setup.cfg  setup.py  simple_ff.py
deploy/: Dockerfile  README.md  _deploy.sh
examples/: column_sweep.npy  compass_eme.py  compass_par_sh.py  compass_par_tt.py  compass_sgs.py  compass_tame.py  demo_camera.py  frame_norebin.npy  gmt_phasing_exp.py  gmt_phasing_exp_gym.py  gmt_slm_openloop.py  gmt_slm_poke.py  gmt_slm_segpist.py  plot_frames.py  plot_frames_gym.py  pointgrey_handler.py  row_sweep.npy  sandbox_ff.py  sandbox_gs.py  sandbox_tame.py  sandbox_torch.py  save_dark_frame.py  slm_align.py  slm_focus_ref.py  slm_make_gmt_pupil.py  test_gmtphasing_gym.py  test_phasediversity_gym.py  test_slm.py  tomo_pd_sandbox.ipynb
examples/tpd/: test.py
examples/tpd/tpd/: params.py  phase.py  tpd.py
gym_gmtphasing/: __init__.py
gym_gmtphasing/envs/: __init__.py  gmtphasing_env.py
gym_phasediversity/: __init__.py
gym_phasediversity/envs/: __init__.py  phasediversity_env.py
pripy/: __init__.py  algos.py  core.py  util.py
speek/: __init__.py  core.py  util.py
