[metadata]
name = pripy
version = 0.1.6
author = Jesse Cranney
author_email = jesse.cranney@anu.edu.au
description = Phase Retrieval algorithms in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jcranney/pripy.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
	numpy
	scipy
    aotools
    torch
    gym
    pygame
include_package_data = True
